# mpi

./: .gitignore  .gitmodules  AGENTS.md  README.md  RELEASING.md
.github/: FUNDING.yml
cmake/: maschinepi-aarch64-toolchain.cmake  mixxx-tools-aarch64-toolchain.cmake
config/: README.md  mixxx-soundconfig.xml  mk3-mode.conf
docs/: beta-blocker-triage.md  getting-started.md  hardware-test.md  migration-inventory.md
docs/plans/: 2026-07-21-fused-image-build.md  (+4 more)
image/: README.md  build-image.sh  inject-image.sh  inspect-image.sh  inspect-mounted-image.sh  install-rootfs.sh  mpi-station-first-boot  policy-rc.d  provision-rootfs  run-in-rootfs.sh
mode-selector/: CMakeLists.txt  README.md  mk3-mode-selector.c
ota/: README.md
scripts/: build-maschinepi-arm64  build-mixxx-tools-arm64  build-mode-selector-arm64  check-submodules.sh  export-release-tree.sh  mpi-audio-profile  mpi-configure-mixxx-controller  mpi-mode-select  mpi-mode-switch  mpi-prepare-data-partitions  mpi-rebind-mk3-hid
systemd/: README.md  maschinepi-audio-profile.service  maschinepi.service  maschinepi.target  mixxx-audio-profile.service  mixxx.service  mixxx.target  mk3-bootsplash.service  mk3-headphone-mirror.service  mk3-hid-rebind.service  mk3-mode-selector.service  mk3-mouse-daemon.service  mk3-overlay.service  mk3-screen-daemon.service  mk3-t9-daemon.service  mode-selector.target  mpi-prepare-data.service  mpi-station-first-boot.service  openbox.service  xvfb.service
tests/: test-data-layout.sh  test-install-rootfs.sh  test-mode-selector.sh  test-systemd-modes.sh
(+7 files in other folders)
